# discovery-skills-cli

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: config.rs  deps.rs  jsonl_merge.rs  lockfile.rs  main.rs  registry.rs  s3_client.rs  sync_config.rs  sync_manifest.rs  ui.rs
src/commands/: install.rs  list.rs  mod.rs  uninstall.rs  update.rs
src/commands/sync/: init.rs  mod.rs  pull.rs  push.rs  status.rs
