[package]
name = "discovery-skills"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Claude Code custom skills"
repository = "https://github.com/yeojinsoo/discovery-skills-cli"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
flate2 = "1"
tar = "0.4"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
semver = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
