[package]
name = "discovery-skills"
version = "0.2.0"
edition = "2021"
description = "CLI tool for managing Claude Code custom skills"
repository = "https://github.com/yeojinsoo/discovery-skills-cli"
homepage = "https://github.com/yeojinsoo/discovery-skills-cli"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
flate2 = "1"
tar = "0.4"
dirs = "6"
humantime = "2"
semver = "1"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
